Sidebar fixed on mobile

--- a/Online-Messaging-App/src/app/home/chatbox/chatbox.component.scss
+++ b/Online-Messaging-App/src/app/home/chatbox/chatbox.component.scss
@@ -309,6 +309,7 @@ mat-expansion-panel:hover {
     float: right;
     min-height: 600px;
     height: 100%;
+    background: var(--element-color);
 }
 
 .sidebarClosed {
@@ -516,17 +517,32 @@ mat-sidenav {
 
 #chevron-right {
     color: var(--primary-text-color);
+    display: none;
+}
+.adminDelete {
+    color: red;
+}
+#sidebarClose{
+    display: none;
 }
 
 @media (max-width: 450px) {
     .backgroundDarker {
-        filter: blur(2px);
+        //filter: blur(2px);
+        filter: brightness(35%);
     }
     .contentOpened {
         margin-right: 0px;
     }
+    #sidebarClose{
+        left: 3rem;
+        bottom: 2rem;
+        position: relative;
+        display: block;
+    }
+    #chevron-right{
+        display: block;
+    }
 }
 
-.adminDelete {
-    color: red;
-}
+
